# agentic_economy

./: .coverage  .env  .env.example  .gitignore  BLOCKCHAIN_SETUP.md  DAY3_SUMMARY.md  DAY4_SUMMARY.md  DAY5_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART_BLOCKCHAIN.md  README.md  SUBMISSION.md  main.py  pyproject.toml
demo/: dashboard.html
scripts/: enable_blockchain.sh  generate_wallets.py
src/: config.py  day3_demo.py  day4_demo.py  types.py
src/agents/: autonomous_quality_agent.py  autonomous_settlement_agent.py  hallucination_agent.py  settlement_agent_x402.py  task_creator_agent.py
src/blockchain/: arc_testnet.py  circle_nanopayments.py  eip3009_signer.py
src/payment/: a2a_router.py
src/protocol/: x402_handler.py
src/tests/integration/: test_a2a_agents.py  test_day4_settlement.py
src/tests/unit/: test_autonomous_agents.py  test_blockchain.py  test_hallucination_agent.py
